--- a/index.html
+++ b/index.html
@@ -86,30 +86,13 @@
         ## Who am I?
         
 
-        ![nathan](images/nathan.jpg)
+        ![aaron](images/aaron.jpg)
 
-        *I'm Nathan LeClaire.*
+        *I'm Aaron Huslage.*
 
-        - Linux/UNIX-centric programmer, technology blogger, and geek
-        - Builder of Docker training materials, first line of defense on customer concerns with the technology 
-        - Lover of writing, music, and avocados
-    </script>
-</section>
-<section data-markdown>
-    <script type="text/template">
-        # Let's start with some questions!
-
-        - Raise your hand if you've:
-            - Heard of Docker 
-            <!-- .element: class="fragment" data-fragment-index="1" -->
-            - Tried Docker online tutorial
-            <!-- .element: class="fragment" data-fragment-index="2" -->
-            - Installed/tried Docker binary
-            <!-- .element: class="fragment" data-fragment-index="3" -->
-            - Used Docker Hub
-            <!-- .element: class="fragment" data-fragment-index="4" -->
-            - Run Docker in development/QA/production
-            <!-- .element: class="fragment" data-fragment-index="5" -->
+        - Linux/UNIX Sysadmin for 21 years.
+        - First line of defense on customer concerns with the technology 
+        - Dad
     </script>
 </section>
 <section data-markdown>
