--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     ## Containers, Engines, & Whales
                     ### *...an introduction to Docker*
                     ![docker](images/diver.jpg)
-    <div class="tiny">presenter: [Nathan LeClaire](http://nathanleclaire.com)</div>
+    <div class="tiny">presenter: Aaron Huslage</div>
 </script>
 </section>
 <section data-markdown>
